# cdwcore

./: .gitignore  AUTHORS  ChangeLog  Makefile  README.md  requirements.txt  setup.cfg  setup.py
debian/: changelog  control  rules
src/: config.py  dbmath.py  logger.py  opsys.py  oradb.py  pgdb.py  timef.py
test/: cdwcore_test.py
